--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -37,7 +37,7 @@ on init
 
 on fs
     mount_all fstab.qcom
-    swapon_all fstab.qcom
+#    swapon_all fstab.qcom
 
     # use /persist as phony PDS partition
     symlink /persist /pds
@@ -207,12 +207,12 @@ on post-fs
     chmod 0660 /sys/class/capsense/fw_update
     chmod 0660 /sys/class/capsense/reset
 
-    write /sys/block/zram0/comp_algorithm lz4
-    write /sys/block/zram0/max_comp_streams 4
+#    write /sys/block/zram0/comp_algorithm lz4
+#    write /sys/block/zram0/max_comp_streams 4
 
-    write /proc/sys/vm/page-cluster 0
+#    write /proc/sys/vm/page-cluster 0
 
-    swapon_all fstab.qcom
+#    swapon_all fstab.qcom
 
 on post-fs-data
     # Setup correct permissions for dbvc and atvc
