Fix several audio related bugs, makes cpu4 always on

--- a/audio/audio_policy.conf
+++ b/audio/audio_policy.conf
@@ -1,5 +1,4 @@
-# Global configuration section:
-# - lists input and output devices always present on the device
+# Global configuration section: lists input and output devices always present on the device
 # as well as the output device selected by default.
 # Devices are designated by a string that corresponds to the enum in audio.h
 # - defines whether the speaker output path uses DRC
@@ -146,17 +145,6 @@ audio_hw_modules {
         channel_masks AUDIO_CHANNEL_IN_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
         devices AUDIO_DEVICE_IN_REMOTE_SUBMIX
-      }
-    }
-  }
-  motvr {
-    inputs {
-      primary {
-        sampling_rates 16000
-        channel_masks AUDIO_CHANNEL_IN_MONO
-        formats AUDIO_FORMAT_PCM_16_BIT
-        devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_WIRED_HEADSET
-        flags AUDIO_INPUT_FLAG_HW_HOTWORD
       }
     }
   }
