--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -305,7 +305,7 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 on property:sys.boot_completed=1
-    setprop sys.io.scheduler bfq
+    setprop sys.io.scheduler cfq
 
 #    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
 #    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
