--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -309,9 +309,9 @@ on property:sys.boot_completed=1
 
 #    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
 #    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
-    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
-    write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,55296,80640"
-    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
+#    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
+#    write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,55296,80640"
+#    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
 
 on property:vold.decrypt=trigger_restart_framework
     start qcom-c_main-sh
