Finally fixed audio problems incall

--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -27,9 +27,9 @@ libraries {
     path /system/lib/soundfx/libmmieffectswrapper.so
   }
 
-  mot_speaker_helper {
-    path /system/lib/soundfx/libspeakerbundle.so
-  }
+#  mot_speaker_helper {
+#    path /system/lib/soundfx/libspeakerbundle.so
+#  }
 
   bundle {
     path /system/lib/soundfx/libbundlewrapper.so
@@ -150,7 +150,7 @@ effects {
   }
   ns {
     library qcom_pre_processing
-    uuid 1d97bb0b-9e2f-4403-0x9ae3-58c2554306f8
+    uuid 1d97bb0b-9e2f-4403-9ae3-58c2554306f8
   }
 }
 
